--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <h1>Év első weblapja</h1>
 <div id="tablazat">
     <table border="2" class="tabla">
-        <tr>     <td>valami</td>    <td>valami</td> </tr>
-        <tr>     <td>valami</td>    <td>valami</td> </tr>
+        <tr>     <td>valami2</td>    <td>valami2</td> </tr>
+        <tr>     <td>valami2</td>    <td>valami2</td> </tr>
     </table>
 </div>
-
+<h2>3dik commit</h2>
 <div class="felsor1">
     <ul>
         <li> felsorolás</li>
